fixed bug of overflow not working

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -489,17 +489,17 @@ pre code {
   border-radius: 1px;
   padding: 2px;
   font-size: 100%;
+  display: inline-block; /* change the default display type to inline-block */
+  overflow: hidden;      /* hide the overflow */
   img.opaque:hover {
-    opacity: 0.4;
+    opacity: 0.6;
     transition: all .4s ease;
     vertical-align: middle;
-    transform:scale(1.5);
-    -ms-transform:scale(1.5); /* IE 9 */
-    -moz-transform:scale(1.5); /* Firefox */
-    -webkit-transform:scale(1.5); /* Safari and Chrome */
-    -o-transform:scale(1.5); /* Opera */
-    display: inline-block; /* change the default display type to inline-block */
-    overflow: hidden;      /* hide the overflow */
+    transform:scale(1.3);
+    -ms-transform:scale(1.3); /* IE 9 */
+    -moz-transform:scale(1.3); /* Firefox */
+    -webkit-transform:scale(1.3); /* Safari and Chrome */
+    -o-transform:scale(1.3); /* Opera */
   }
 }
 
